fix bug 534835, r/sr/a=standard8, when fetching whole imap message, use the literal size as the message size in case the server gets the rfc822.size wrong consistently, to avoid refetching the same message over and over again