mailnews/imap/test/unit/test_downloadOffline.js
@@ -9,6 +9,8 @@ var gIMAPDaemon, gServer, gIMAPIncomingServer;
 const gIMAPService = Cc["@mozilla.org/messenger/messageservice;1?type=imap"]
                        .getService(Ci.nsIMsgMessageService);
 
+load("../../mailnews/resources/messageGenerator.js");
+
 const gFileName = "bug460636";
 const gMsgFile = do_get_file("../../mailnews/data/" + gFileName);
 
@@ -37,16 +39,27 @@ function run_test()
 
   let inbox = gIMAPDaemon.getMailbox("INBOX");
 
-  /*
+  let ioService = Cc["@mozilla.org/network/io-service;1"]
+  .getService(Ci.nsIIOService);
+ /*
    * Ok, prelude done. Read the original message from disk
    * (through a file URI), and add it to the Inbox.
    */
-  let msgfileuri = Cc["@mozilla.org/network/io-service;1"]
-                     .getService(Ci.nsIIOService)
-                     .newFileURI(gMsgFile).QueryInterface(Ci.nsIFileURL);
+  let msgfileuri = ioService.newFileURI(gMsgFile).QueryInterface(Ci.nsIFileURL);
 
   inbox.addMessage(new imapMessage(msgfileuri.spec, inbox.uidnext++, []));
 
+  let messages = [];
+  let gMessageGenerator = new MessageGenerator();
+  messages = messages.concat(gMessageGenerator.makeMessage());
+  gSynthMessage = messages[0];
+  let dataUri = ioService.newURI("data:text/plain;base64," +
+                   btoa(messages[0].toMessageString()),
+                   null, null);
+  let imapMsg = new imapMessage(dataUri.spec, inbox.uidnext++, []);
+  imapMsg.setSize(5000);
+  inbox.addMessage(imapMsg);
+  
   do_test_pending();
   do_timeout(10000, function(){
         do_throw('downloadAllForOffline did not complete within 10 seconds. ABORTING.');
@@ -73,6 +86,23 @@ var UrlListener =
       gDownloadedOnce = true;
       gIMAPInbox.downloadAllForOffline(UrlListener, null);
       return;
+    }
+    else {
+      // verify that the message headers have the offline flag set.
+      let msgEnumerator = gIMAPInbox.msgDatabase.EnumerateMessages();
+      let offset = new Object;
+      let size = new Object;
+      while (msgEnumerator.hasMoreElements())
+      {
+        let header = msgEnumerator.getNext();
+        // Verify that each message has been downloaded and looks OK.
+        if (header instanceof Components.interfaces.nsIMsgDBHdr &&
+            (header.flags & Ci.nsMsgMessageFlags.Offline))
+          gIMAPInbox.getOfflineFileStream(header.messageKey, offset, size).close();
+        else
+          do_throw("Message not downloaded for offline use");
+      }
+      endTest();
     }
     do_timeout(1000, endTest);
   }
